--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="splash_text">Worldly Recipe Book</string>
+    <string name="header_problem">Uh-oh, seems something went wrong...</string>
+    <string name="text_problem_internet">There was a problem loading the recipes from the server, are you connected to the internet?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
