--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Recipes</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_dashboard">Categories</string>
     <string name="title_notifications">Notifications</string>
     <string name="splash_text">Worldly Recipe Book</string>
     <string name="header_problem">Uh-oh, seems something went wrong...</string>
