--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
     <string name="app_name">Recipes</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Categories</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_categories">Categories</string>
     <string name="splash_text">Worldly Recipe Book</string>
     <string name="header_problem">Uh-oh, seems something went wrong...</string>
     <string name="text_problem_internet">There was a problem loading the recipes from the server, are you connected to the internet?</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_account">Account</string>
 </resources>
